[gd_scene load_steps=33 format=3 uid="uid://bjss4nulwphgk"]

[ext_resource type="Script" uid="uid://f1qr8cm31i60" path="res://Codigos/Jogador/Escolher-cabelo-container.gd" id="1_c5dj6"]
[ext_resource type="Texture2D" uid="uid://by4m3gk3q07jp" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/3 Icons/Icons yellow/Icon_05.png" id="2_rg8th"]
[ext_resource type="Texture2D" uid="uid://dpii1qdr5xa7i" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/3 Icons/Icons yellow/Icon_06.png" id="3_3jdsf"]
[ext_resource type="FontFile" uid="uid://b13xmp6wu4ea" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/6 Font/CraftPixNet Survival Kit.otf" id="4_urj80"]
[ext_resource type="Texture2D" uid="uid://bxsowbfp3t6yn" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/2 Bars/Button1.png" id="5_e4pes"]
[ext_resource type="Script" uid="uid://m1j67fuj4ma4" path="res://Codigos/Design/Escala-do-botao.gd" id="6_h2wby"]
[ext_resource type="Texture2D" uid="uid://cctpinheeduv2" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/3 Icons/Icons blue/Icon_01.png" id="7_3n5do"]

[sub_resource type="LabelSettings" id="LabelSettings_aos0l"]
font = ExtResource("4_urj80")
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_06qn1"]
font = ExtResource("4_urj80")
font_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oqbbt"]
bg_color = Color(0.6, 0.6, 0.6, 0)
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_axsdt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1aow"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jco07"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xf6m1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6gls"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhx40"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kt60c"]
bg_color = Color(1, 0.213647, 0.713755, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m181f"]
bg_color = Color(0.97026, 0.000659006, 0.950987, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wxde0"]
font = ExtResource("4_urj80")
font_size = 14
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 13
shadow_color = Color(0.85982, 0, 0.251514, 0)
shadow_offset = Vector2(22, 1)

[sub_resource type="Animation" id="Animation_ekpm1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Botao:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(45, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Botao:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(31, 11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Botao:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qsr47"]
resource_name = "hover_scale"
length = 0.133
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Botao:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(45, 24), Vector2(49, 28)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Botao:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(31, 11), Vector2(30, 9.66667), Vector2(29.6667, 10.3333)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Botao:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1.1, 1.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f7x11"]
_data = {
&"RESET": SubResource("Animation_ekpm1"),
&"hover_scale": SubResource("Animation_qsr47")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g5qt8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ma4jl"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="LabelSettings" id="LabelSettings_3umho"]
font = ExtResource("4_urj80")
font_size = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ghrf6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pr053"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7wwe6"]
font = ExtResource("4_urj80")
font_size = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2csbp"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bwvfg"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cnf1j"]
font = ExtResource("4_urj80")
font_size = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bexmh"]
font = ExtResource("4_urj80")
font_size = 10
shadow_color = Color(0, 0, 0, 1)

[node name="botoes-de-edicao-de-jogador" type="Node2D"]
position = Vector2(181, 144)
script = ExtResource("1_c5dj6")

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_right = 164.0
offset_bottom = 133.0

[node name="ContainerTrocarCabelo" type="Control" parent="Container"]
texture_filter = 1
layout_mode = 2
anchors_preset = 0
offset_left = -127.0
offset_top = -22.0
offset_right = -64.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="TrocarCabelo" type="Button" parent="Container/ContainerTrocarCabelo"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 3.78333
anchor_top = 0.9
anchor_right = 3.78333
anchor_bottom = 0.9
offset_left = -191.783
offset_top = -17.2
offset_right = -169.783
offset_bottom = 4.8
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("2_rg8th")
flat = true
expand_icon = true

[node name="TrocarCabeloVoltar" type="Button" parent="Container/ContainerTrocarCabelo"]
texture_filter = 1
layout_mode = 2
offset_left = -5.0
offset_top = -1.0
offset_right = 17.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("3_3jdsf")
flat = true
expand_icon = true

[node name="Label" type="Label" parent="Container/ContainerTrocarCabelo"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 3.2
anchor_top = 0.7
anchor_right = 3.2
anchor_bottom = 0.7
offset_left = -179.2
offset_top = -10.6
offset_right = -156.2
offset_bottom = 4.39999
grow_horizontal = 2
grow_vertical = 2
text = "Hair"
label_settings = SubResource("LabelSettings_aos0l")

[node name="ContainerTrocarRoupa" type="Control" parent="Container"]
texture_filter = 1
layout_mode = 2
anchors_preset = 0
offset_left = -125.0
offset_top = 1.0
offset_right = -63.0
offset_bottom = 14.0

[node name="TrocarRoupa" type="Button" parent="Container/ContainerTrocarRoupa"]
layout_mode = 0
offset_left = 45.0
offset_top = -4.99997
offset_right = 67.0
offset_bottom = 17.0
icon = ExtResource("2_rg8th")
flat = true
expand_icon = true

[node name="TrocarRoupaVoltar" type="Button" parent="Container/ContainerTrocarRoupa"]
layout_mode = 0
offset_left = -7.0
offset_top = -6.0
offset_right = 15.0
offset_bottom = 16.0
icon = ExtResource("3_3jdsf")
flat = true
expand_icon = true

[node name="outfit" type="Label" parent="Container/ContainerTrocarRoupa"]
layout_mode = 0
offset_left = 13.667
offset_top = -2.6668
offset_right = 53.667
offset_bottom = 20.3332
text = "Outfit
"
label_settings = SubResource("LabelSettings_06qn1")

[node name="Apelido" type="Control" parent="Container"]
texture_filter = 1
layout_mode = 2
anchors_preset = 0
offset_left = 49.333
offset_top = 58.0
offset_right = 89.333
offset_bottom = 98.0

[node name="CampoTexto" type="LineEdit" parent="Container/Apelido"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.841667
anchor_top = -0.133333
anchor_right = 0.841667
anchor_bottom = -0.133333
offset_left = -124.0
offset_top = -186.667
offset_right = 89.0003
offset_bottom = -152.667
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("4_urj80")
placeholder_text = "INSERT NICKNAME"
alignment = 1

[node name="Salvar" type="Control" parent="Container"]
layout_mode = 2
anchors_preset = 0
offset_left = -44.0
offset_top = -28.0
offset_right = 65.0
offset_bottom = 12.0

[node name="Botao" type="Button" parent="Container/Salvar"]
layout_mode = 0
offset_left = 31.0
offset_top = 11.0
offset_right = 76.0
offset_bottom = 35.0
theme_override_styles/focus = SubResource("StyleBoxFlat_oqbbt")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_axsdt")
theme_override_styles/disabled = SubResource("StyleBoxFlat_h1aow")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_jco07")
theme_override_styles/hover = SubResource("StyleBoxFlat_xf6m1")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_i6gls")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vhx40")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_kt60c")
theme_override_styles/normal = SubResource("StyleBoxFlat_m181f")
icon = ExtResource("5_e4pes")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("6_h2wby")

[node name="Label" type="Label" parent="Container/Salvar"]
layout_mode = 0
offset_left = 39.0
offset_top = 12.6667
offset_right = 72.0
offset_bottom = 28.6667
text = "Save"
label_settings = SubResource("LabelSettings_wxde0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container/Salvar"]
libraries = {
&"": SubResource("AnimationLibrary_f7x11")
}

[node name="CorCabelo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -57.0
offset_top = -98.0
offset_right = 81.0
offset_bottom = -58.0

[node name="ContainerCorCabelo" type="Panel" parent="CorCabelo"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -25.0
offset_right = -25.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g5qt8")

[node name="SliderVermelho" type="HSlider" parent="CorCabelo/ContainerCorCabelo"]
layout_mode = 2
offset_left = 2.0
offset_top = 6.0
offset_right = 182.0
offset_bottom = 22.0
scale = Vector2(0.5, 0.5)
theme_override_icons/grabber_disabled = ExtResource("7_3n5do")
theme_override_styles/slider = SubResource("StyleBoxFlat_ma4jl")

[node name="RotuloValorVermelho" type="Label" parent="CorCabelo/ContainerCorCabelo"]
layout_mode = 2
offset_left = 95.0
offset_top = 4.0
offset_right = 112.0
offset_bottom = 16.0
text = "124"
label_settings = SubResource("LabelSettings_3umho")

[node name="ContainerCorCabelo2" type="Panel" parent="CorCabelo"]
layout_mode = 0
offset_left = 15.0
offset_top = 13.0
offset_right = 136.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ghrf6")

[node name="SliderVerde" type="HSlider" parent="CorCabelo/ContainerCorCabelo2"]
layout_mode = 2
offset_left = 2.0
offset_right = 182.0
offset_bottom = 16.0
scale = Vector2(0.5, 0.5)
theme_override_styles/slider = SubResource("StyleBoxFlat_pr053")

[node name="RotuloValorVerde" type="Label" parent="CorCabelo/ContainerCorCabelo2"]
layout_mode = 2
offset_left = 96.0
offset_top = -2.0
offset_right = 110.0
offset_bottom = 10.0
text = "123"
label_settings = SubResource("LabelSettings_7wwe6")

[node name="ContainerCorCabelo3" type="Panel" parent="CorCabelo"]
layout_mode = 0
offset_left = 16.0
offset_top = 31.0
offset_right = 139.0
offset_bottom = 46.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2csbp")

[node name="SliderAzul" type="HSlider" parent="CorCabelo/ContainerCorCabelo3"]
layout_mode = 2
offset_left = 1.0
offset_top = -6.0
offset_right = 181.0
offset_bottom = 10.0
scale = Vector2(0.5, 0.5)
theme_override_styles/slider = SubResource("StyleBoxFlat_bwvfg")
max_value = 255.0

[node name="RotuloValorAzul" type="Label" parent="CorCabelo/ContainerCorCabelo3"]
layout_mode = 2
offset_left = 95.0
offset_top = -8.0
offset_right = 110.0
offset_bottom = 4.0
text = "122"
label_settings = SubResource("LabelSettings_cnf1j")

[node name="Label" type="Label" parent="CorCabelo"]
layout_mode = 0
offset_left = 38.0
offset_top = -11.0
offset_right = 93.0
offset_bottom = 12.0
text = "HAIR COLOR"
label_settings = SubResource("LabelSettings_bexmh")

[connection signal="text_changed" from="Container/Apelido/CampoTexto" to="." method="_on_line_edit_text_changed"]
[connection signal="mouse_entered" from="Container/Salvar/Botao" to="Container/Salvar/Botao" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Container/Salvar/Botao" to="Container/Salvar/Botao" method="_on_mouse_exited"]
[connection signal="pressed" from="Container/Salvar/Botao" to="Container/Salvar/Botao" method="_on_pressed"]
